feat: Add analysis history feature - save analyses, view past results, unique filenames

--- a/templates/index.html
+++ b/templates/index.html
@@ -52,6 +52,12 @@
       
     </form>
     
+    <!-- History Link -->
+    <div style="text-align: center; margin-top: 20px;">
+      <a href="/history" class="history-link">
+        📂 View Analysis History
+      </a>
+    </div>
     
   </div>
   
